cmake_minimum_required(VERSION 3.19)
project(ProyectoMazoRallante C)

set(CMAKE_C_STANDARD 99)

add_executable(Archivos
        angl.c
        angl.h
        Accel.c
        Accel.h
        arrays.c
        arrays.h
        Cheb3D.c
        Cheb3D.h
        EccAnom.c
        EccAnom.h
        elements.c
        elements.h
        EqnEquinox.c
        EqnEquinox.h
        Frac.c
        Frac.h
        GHAMatrix.c
        GHAMatrix.h
        gast.c
        gast.h
        gibbs.c
        gibbs.h
        globales.h
        gmst.c
        gmst.h
        hgibbs.c
        hgibbs.h
        IERS.c
        IERS.h
        JPL_Eph_DE430.C
        JPL_Eph_DE430.h
        Legendre.c
        Legendre.h
        main.c
        MeanObliquity.c
        MeanObliquity.h
        MeasUpdate.c
        MeasUpdate.H
        Mjday.c
        Mjday.h
        Mjday_TBD.c
        Mjday_TBD.H
        NutAngles.c
        NutAngles.h
        NutMatrix.c
        NutMatrix.h
        ode.c
        ode.h
        position.c
        position.h
        PrecMatrix.c
        PrecMatrix.h
        Polematrix.c
        Polematrix.h
        AccelPointMass.c
        AccelPointMass.h
        R_x.c
        R_x.h
        R_y.c
        R_y.h
        R_z.c
        R_z.h
        sat_const.h
        sign.c
        sign.h
        timediff.c
        timediff.h
        TimeUpdate.h
        TimeUpdate.c
        unit.c
        unit.h
        LTC.c
        LTC.h
        AzElPa.c
        AzElPa.h
        AccelHarmonic.c
        AccelHarmonic.h
        G_AccelHarmonic.c
        G_AccelHarmonic.h
        Anglesg.c
        Anglesg.h
        rpoly.c
        rpoly.h
        doubler.c
        doubler.h
        Geodetic.c
        Geodetic.h
        VarEqn.c
        VarEqn.h
        anglesdr.c
        anglesdr.h
        testIOD_KF.c)